# boatDetector

./: .gitignore  README.md  boat.py  main.py  store_images.py
client/: app.js  package-lock.json  package.json  pgAdaptor.js  pool.js  server.js
client/api/: index.js
client/public/: about.css  about.html  docs.css  docs.html  index.css  index.html  index.js  navbar.css
client/public/photo-swipe/: photoswipe.esm.js
client/schema/: index.js  mutation.js  query.js  types.js
client/schema/mutations/: deleteBoat.js  deleteBoats.js
client/schema/queries/: getBoat.js  getBoats.js
detector/: boat.py  main.py  pyproject.toml  store_images.py
detector/benchmark_testing/: main.py  test.py  utils.py
