[tool.poetry]
name = "boatdetectormp"
version = "0.1.0"
description = ""
authors = ["joykhera <joykhera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mediapipe = "0.10.0"
colorama = "^0.4.6"
ultralytics = "^8.0.203"
psycopg2 = "^2.9.9"
google-auth-oauthlib = "^1.1.0"
setuptools = "^68.2.2"
python-dotenv = "^1.0.0"
cloudinary = "^1.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
